[package]
name = "qcrypto"
version = "0.0.1"
edition = "2024"
authors = ["Jorge Garcia-Diaz <jgarcidi@ull.edu.es>", "Daniel Escanez-Exposito <jescanez@ull.edu.es>"]
description = "Library for the design, simulation and validation of Quantum Cryptography protocols"
keywords = ["quantum", "cryptography", "simulation", "qkd", "physics"]
categories = ["science", "cryptography", "simulation"]
repository = "https://github.com/jorgegardiaz/qcrypto"
readme = "README.md"
license = "MIT"

[lib]
name = "qcrypto"
path = "src/lib.rs"

[dependencies]
nalgebra = "0.34.1"
ndarray = { version = "0.17.2", features = ["rayon"] }
num-complex = "0.4.6"
rand = "0.9.2"
rayon = "1.11.0"
thiserror = "2.0.18"

[dev-dependencies]
approx = "0.5.1"
